envoy/envoy-edge-device.yaml
node:
  id: edge-node
  cluster: edge-node-cluster

static_resources:
  listeners:
  - name: inbound_from_edge_node
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 3001 # -> 4001 internal
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          common_http_protocol_options:
            idle_timeout: 1s
          forward_client_cert_details: sanitize_set
          set_current_client_cert_details:
              uri: true
          codec_type: auto
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: "/tmp/inbound-proxy.log"
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              transport_api_version: V3
              with_request_body:
                max_request_bytes: 8192
                allow_partial_message: true
              failure_mode_allow: false
              grpc_service:
                google_grpc:
                  target_uri: 127.0.0.1:8182
                  stat_prefix: ext_authz
                timeout: 0.5s   
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: local_service
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificate_sds_secret_configs:
            - name: "spiffe://paavo-rotsten.org/edge-device" # Our SPIFFE ID
              sds_config:
                resource_api_version: V3
                api_config_source:
                  api_type: GRPC
                  transport_api_version: V3
                  grpc_services:
                    envoy_grpc:
                      cluster_name: spire_agent
            combined_validation_context:
              default_validation_context: {}
              validation_context_sds_secret_config:
                name: "spiffe://paavo-rotsten.org" # Trust bundle
                sds_config:
                  resource_api_version: V3
                  api_config_source:
                    api_type: GRPC
                    transport_api_version: V3
                    grpc_services:
                      envoy_grpc:
                        cluster_name: spire_agent
            tls_params:
              ecdh_curves:
                - X25519:P-256:P-521:P-384

  # Remap local 4002 to edge node 3002
  - name: outbound_to_edge_node
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 4002 # -> 3002
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: outbound_edge_node
            virtual_hosts:
            - name: edge_node
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: edge_node
  
  clusters:
  - name: local_service
    type: strict_dns
    load_assignment:
      cluster_name: local_service
      endpoints:	
      - lb_endpoints:	
        - endpoint:	
            address:	
              socket_address:	
                address: 127.0.0.1
                port_value: 4001
  - name: spire_agent
    connect_timeout: 0.25s
    http2_protocol_options: {}
    load_assignment:	
      cluster_name: spire_agent
      endpoints:	
      - lb_endpoints:	
        - endpoint:	
            address:	
              pipe:	
                path: /run/spire-agent/public/api.sock
  - name: edge_node
    type: strict_dns
    load_assignment:
      cluster_name: edge_node
      endpoints:	
      - lb_endpoints:	
        - endpoint:	
            address:	
              socket_address:	
                address: "192.168.32.55"
                port_value: 3002
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificate_sds_secret_configs:
          - name: "spiffe://paavo-rotsten.org/edge-device" # Our SPIFFE ID
            sds_config:
              resource_api_version: V3
              api_config_source:
                api_type: GRPC
                transport_api_version: V3
                grpc_services:
                  envoy_grpc:
                    cluster_name: spire_agent
          combined_validation_context:
            default_validation_context: {}
            validation_context_sds_secret_config:
              name: "spiffe://paavo-rotsten.org" # Trust bundle
              sds_config:
                resource_api_version: V3
                api_config_source:
                  api_type: GRPC
                  transport_api_version: V3
                  grpc_services:
                    envoy_grpc:
                      cluster_name: spire_agent
          tls_params:
            ecdh_curves:
              - X25519:P-256:P-521:P-384
