envoy/envoy-edge-node.yaml
node:
  id: edge-node
  cluster: edge-node-cluster

static_resources:
  listeners:
  # Map inbound 3002 to local 4002
  - name: inbound_from_edge_device
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 3002
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: local_service
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificate_sds_secret_configs:
            - name: "spiffe://paavo-rotsten.org/edge-service" # Our SPIFFE ID
              sds_config:
                resource_api_version: V3
                api_config_source:
                  api_type: GRPC
                  transport_api_version: V3
                  grpc_services:
                    envoy_grpc:
                      cluster_name: spire_agent
            combined_validation_context:
              default_validation_context: {}
              validation_context_sds_secret_config:
                name: "spiffe://paavo-rotsten.org" # Trust bundle
                sds_config:
                  resource_api_version: V3
                  api_config_source:
                    api_type: GRPC
                    transport_api_version: V3
                    grpc_services:
                      envoy_grpc:
                        cluster_name: spire_agent
            tls_params:
              ecdh_curves:
                - X25519:P-256:P-521:P-384
  # Remap local 4001 to cloud server 3001
  - name: outbound_to_cloud_server
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 4001 # -> 3001
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: outbound_cloud_server
            virtual_hosts:
            - name: cloud_server
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: cloud_server
  clusters:
  - name: spire_agent
    connect_timeout: 0.25s
    http2_protocol_options: {}
    load_assignment:	
      cluster_name: spire_agent
      endpoints:	
      - lb_endpoints:	
        - endpoint:	
            address:	
              pipe:	
                path: /run/spire-agent/public/api.sock
  - name: local_service
    type: strict_dns
    load_assignment:
      cluster_name: local_service
      endpoints:	
      - lb_endpoints:	
        - endpoint:	
            address:	
              socket_address:	
                address: 127.0.0.1
                port_value: 4002
  - name: cloud_server
    type: strict_dns
    load_assignment:
      cluster_name: cloud_server
      endpoints:	
      - lb_endpoints:	
        - endpoint:	
            address:	
              socket_address:	
                address: "158.180.45.228"
                port_value: 3001
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificate_sds_secret_configs:
          - name: "spiffe://paavo-rotsten.org/edge-service" # Our SPIFFE ID
            sds_config:
              resource_api_version: V3
              api_config_source:
                api_type: GRPC
                transport_api_version: V3
                grpc_services:
                  envoy_grpc:
                    cluster_name: spire_agent
          combined_validation_context:
            default_validation_context: {}
            validation_context_sds_secret_config:
              name: "spiffe://paavo-rotsten.org" # Trust bundle
              sds_config:
                resource_api_version: V3
                api_config_source:
                  api_type: GRPC
                  transport_api_version: V3
                  grpc_services:
                    envoy_grpc:
                      cluster_name: spire_agent
          tls_params:
            ecdh_curves:
              - X25519:P-256:P-521:P-384
